--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -981,24 +981,22 @@
 				<h6>A. Formes.</h6>
 				<div id="section-041" class="section" data-section-no="41">
 					<p>Il y a en copte deux articles: l'article défini et l'article indéfini.</p>
-					<p>I. Article défini.</p>
+					<b>I. Article défini.</b>
 					<p>L'article défini se divise en faible et en fort:</p>
 					<table>
 						<tr>
 							<th></th>
-							<th colspan="2">Singulier.</th>
+							<th colspan="3">Singulier.</th>
+							<th colspan="2" rowspan="2">Pluriel.</th>
+						</tr>
+						<tr>
 							<th></th>
-							<th colspan="2">Pluriel.</th>
+							<th>faible</th>
+							<th>fort</th>
+							<th></th>
 						</tr>
 						<tr>
-							<td></td>
-							<td>faible</td>
-							<td>fort</td>
-							<td></td>
-							<td colspan="2">&nbsp;</td>
-						</tr>
-						<tr>
-							<td>masc.</td>
+							<th>masc.</th>
 							<td><em>ⲡ</em> <em>ⲫ</em></td>
 							<td><em>ⲡⲓ</em></td>
 							<td>le</td>
@@ -1006,7 +1004,7 @@
 							<td rowspan="2">les</td>
 						</tr>
 						<tr>
-							<td>fém.</td>
+							<th>fém.</th>
 							<td><em>ⲧ</em> <em>ⲑ</em></td>
 							<td><em>ϯ</em></td>
 							<td>la</td>
@@ -1019,10 +1017,8 @@
 					<p>L'article fort <em>ⲡⲓ</em> <em>ϯ</em> détermine avec plus de précision, il indique un individu en particulier.</p>
 					<table>
 						<tr>
-							<th>Article faible.</th>
-							<th></th>
-							<th>Article fort.</th>
-							<th></th>
+							<th colspan="2">Article faible.</th>
+							<th colspan="2">Article fort.</th>
 						</tr>
 						<tr>
 							<td><em>ⲫ-ⲛⲟⲩϯ</em></td>
@@ -1047,17 +1043,23 @@
 				</div>
 				<div id="section-043" class="section" data-section-no="43">
 					<p><i>Remarques.</i></p>
-					<p><b>1.</b> Les mots qui commencent par <em>ⲁ</em> prennent généralement l'article <em>ⲡⲓ</em> et ceux qui commencent par <em>ⲟⲩ</em>, <em>ⲱ</em>, l'article <em>ⲡ</em>: <em>ⲡⲓ-ⲁⲥⲉⲃⲏⲥ</em> «l'impie», <em>ⲡⲓ-ⲁⲧϩⲏⲧ</em> «l'insensé», <em>ⲡ-ⲟⲩⲣⲟ</em> «le roi», <em>ⲡ-ⲱⲛϧ</em> «la vie».</p>
-					<p><b>2.</b> Pour éviter toute équivoque on dit:</p>
-					<p><em>ⲫ-ⲓⲱⲧ</em> «le père», <em>ⲡ-ⲓⲱⲧ</em> «l'orge»;</p>
-					<p><em>ⲫ-ⲓⲟⲙ</em> «la mer», <em>ⲡ-ⲓⲟⲙ</em> «le récipient du pressoir».</p>
+					<ol>
+						<li>
+							<p>Les mots qui commencent par <em>ⲁ</em> prennent généralement l'article <em>ⲡⲓ</em> et ceux qui commencent par <em>ⲟⲩ</em>, <em>ⲱ</em>, l'article <em>ⲡ</em>: <em>ⲡⲓ-ⲁⲥⲉⲃⲏⲥ</em> «l'impie», <em>ⲡⲓ-ⲁⲧϩⲏⲧ</em> «l'insensé», <em>ⲡ-ⲟⲩⲣⲟ</em> «le roi», <em>ⲡ-ⲱⲛϧ</em> «la vie».</p>
+						</li>
+						<li>
+							<p>Pour éviter toute équivoque on dit:</p>
+							<p><em>ⲫ-ⲓⲱⲧ</em> «le père», <em>ⲡ-ⲓⲱⲧ</em> «l'orge»;</p>
+							<p><em>ⲫ-ⲓⲟⲙ</em> «la mer», <em>ⲡ-ⲓⲟⲙ</em> «le récipient du pressoir».</p>
+						</li>
+					</ol>
 				</div>
 				<div id="section-044" class="section" data-section-no="44">
 					<p>L'article <em>ⲛⲉⲛ</em> ne s'emploie que devant un nom mis en annexion, <em>ⲛⲓ</em> peut être usité partout:</p>
 					<p><em>ⲛⲉⲛ-ϣⲏⲣⲓ ⲙ̀ⲡⲓ︤ⲥ︦ⲗ︥</em> «les fils d'Israël»;</p>
 					<p><em>ⲛⲉⲛ-ⲙⲱⲓⲧ ⲙ̀ⲫⲣⲱⲙⲓ</em> «les voies de l'homme»<sup class="footnote">2</sup>.</p>
 				</div>
-				<p><b>II.</b> Article indéfini.</p>
+				<p><b>II. Article indéfini.</b></p>
 				<div id="section-045" class="section" data-section-no="45">
 					<p>Sing. <em>ⲟⲩ</em> «un, une», plur. <em>ϩⲁⲛ</em> «des».</p>
 					<p>Ex. <em>ⲟⲩ-ⲣⲱⲙⲓ</em> «un homme», <em>ϩⲁⲛ-ⲣⲱⲙⲓ</em> «des hommes»;</p>
