--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -686,29 +686,31 @@
 				<p class="footnote">1. On peut citer comme exception <em>ⲁⲅⲱ</em> «perte», <i>Lév.</i> 5, 22. Mais cette orthographe est rare, le mot s'écrit plutôt <em>ⲁⲕⲱ</em>. Les Coptes ont confondu plusieurs fois <em>ⲅ</em> et <em>ⲕ</em>, cf. <em>ⲕⲉⲛⲉⲁ</em>, <i>Nomb.</i> 15, 14, pour <em>ⲅⲉⲛⲉⲁ</em>; <em>ⲕⲁⲗⲏ</em> <i>Lév.</i> 11, 28, pour <em>ⲅⲁⲗⲏ</em>. AB. 100.</p>
 				<p>Les consonnes aspirables sont:</p>
 				<p>Fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>; aspirées <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>.</p>
-				<div id="section-005" class="section" data-section-no="5">
-					<p><b>1. Labiales.</b> <em>ⲃ</em> se prononce actuellement <i>v</i>; les Coptes le prononcent parfois <em>ⲟⲩ</em> et c'est pour cette raison que <em>ⲃ</em> remplace <em>ⲟⲩ</em> dans plusieurs mots. Ainsi <em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ</em> s'écrit aussi <em>ⲃⲟⲛ ⲛⲓⲃⲉⲛ</em>.</p>
-					<p>On ne met aucune différence de prononciation entre <em>ⲫ</em> et <em>ϥ</em>.</p>
-				</div>
-				<div id="section-006" class="section" data-section-no="6">
-					<p><b>2. Dentales.</b> <em>ⲧ</em> remplace le <i>d</i> fort des quelques mots latins employés en copte.</p>
-					<p>Ex: <em>ⲡⲣⲉⲧⲁ</em> = præda; <em>ⲃⲉⲣⲉⲧⲁⲣⲓⲟⲥ</em> = veredarius.</p>
-					<p>Le Coptes de la Haute-Egypte donnent au <em>ⲧ</em> le son <i>d</i>.</p>
-					<p><em>ϯ</em> se prononce toujours <i>ti</i> (<i>di</i> en Haute-Egypte) et lorsque <em>ⲧ</em> est suivi de <em>ⲓ</em> on écrit parfois <em>ϯ</em> pour <em>ⲧⲓ</em>. Ex: <em>ϯⲙⲏ</em> = <em>ⲧⲓⲙⲏ</em> «prix».</p>
-					<p><em>ⲑ</em> prononce à la manière du grec moderne.</p>
-					<p><em>ⲥ</em> a toujours le son doux <i>s</i>.</p>
-				</div>
-				<div id="section-007" class="section" data-section-no="7">
-					<p><b>3. Gutturales.</b> <em>ⲭ</em> se prononce <i>sch</i> dans quelques mots, par ex. <em>ⲭⲉⲣⲟⲩⲃⲓⲙ</em>; de là vient peut-être la graphie <em>ⲙⲉⲭⲓⲣ</em> du mot <em>ⲙⲉϣⲓⲣ</em>.</p>
-					<p><em>ⲕ</em> est toujours fort.</p>
-					<p><em>ϧ</em> a exactement la valeur du <em class="ar">خ</em> arabe; <em>ϩ</em>, celle du <em class="ar">ه</em>.</p>
-				</div>
-				<div id="section-008" class="section" data-section-no="8">
-					<p><b>4. Palatales.</b> Actuellement, les Coptes ne mettent aucune différence de prononciation entre <em>ϣ</em> et <em>ϭ</em>; aussi ces deux lettres sont-elles souvent écrites l'une pour l'autre.</p>
-					<p>Il est probable que <em>ϭ</em> se prononçait autrefois <i>tsch</i>. Quelques auteurs lui attribuent la valeur <i>g</i> dur.</p>
-					<p><em>ϫ</em> = <i>dj</i>; cependant quelques Coptes le traitent comme <em class="ar">ج</em> arabe et le prononcent <i>g</i> dur.</p>
-					<p>Les liquides ont en copte la valeur habituelle.</p>
-				</div>
+				<ol>
+					<li id="section-005" class="section" data-section-no="5">
+						<p><b>Labiales.</b> <em>ⲃ</em> se prononce actuellement <i>v</i>; les Coptes le prononcent parfois <em>ⲟⲩ</em> et c'est pour cette raison que <em>ⲃ</em> remplace <em>ⲟⲩ</em> dans plusieurs mots. Ainsi <em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ</em> s'écrit aussi <em>ⲃⲟⲛ ⲛⲓⲃⲉⲛ</em>.</p>
+						<p>On ne met aucune différence de prononciation entre <em>ⲫ</em> et <em>ϥ</em>.</p>
+					</li>
+					<li id="section-006" class="section" data-section-no="6">
+						<p><b>Dentales.</b> <em>ⲧ</em> remplace le <i>d</i> fort des quelques mots latins employés en copte.</p>
+						<p>Ex: <em>ⲡⲣⲉⲧⲁ</em> = præda; <em>ⲃⲉⲣⲉⲧⲁⲣⲓⲟⲥ</em> = veredarius.</p>
+						<p>Le Coptes de la Haute-Egypte donnent au <em>ⲧ</em> le son <i>d</i>.</p>
+						<p><em>ϯ</em> se prononce toujours <i>ti</i> (<i>di</i> en Haute-Egypte) et lorsque <em>ⲧ</em> est suivi de <em>ⲓ</em> on écrit parfois <em>ϯ</em> pour <em>ⲧⲓ</em>. Ex: <em>ϯⲙⲏ</em> = <em>ⲧⲓⲙⲏ</em> «prix».</p>
+						<p><em>ⲑ</em> prononce à la manière du grec moderne.</p>
+						<p><em>ⲥ</em> a toujours le son doux <i>s</i>.</p>
+					</li>
+					<li id="section-007" class="section" data-section-no="7">
+						<p><b>Gutturales.</b> <em>ⲭ</em> se prononce <i>sch</i> dans quelques mots, par ex. <em>ⲭⲉⲣⲟⲩⲃⲓⲙ</em>; de là vient peut-être la graphie <em>ⲙⲉⲭⲓⲣ</em> du mot <em>ⲙⲉϣⲓⲣ</em>.</p>
+						<p><em>ⲕ</em> est toujours fort.</p>
+						<p><em>ϧ</em> a exactement la valeur du <em class="ar">خ</em> arabe; <em>ϩ</em>, celle du <em class="ar">ه</em>.</p>
+					</li>
+					<li id="section-008" class="section" data-section-no="8">
+						<p><b>Palatales.</b> Actuellement, les Coptes ne mettent aucune différence de prononciation entre <em>ϣ</em> et <em>ϭ</em>; aussi ces deux lettres sont-elles souvent écrites l'une pour l'autre.</p>
+						<p>Il est probable que <em>ϭ</em> se prononçait autrefois <i>tsch</i>. Quelques auteurs lui attribuent la valeur <i>g</i> dur.</p>
+						<p><em>ϫ</em> = <i>dj</i>; cependant quelques Coptes le traitent comme <em class="ar">ج</em> arabe et le prononcent <i>g</i> dur.</p>
+						<p>Les liquides ont en copte la valeur habituelle.</p>
+					</li>
+				</ol>
 				<h5 id="voyelles_et_diphtongues">2. Voyelles et Diphtongues.</h5>
 				<div id="section-009" class="section" data-section-no="9">
 					<p>Il y a en copte sept voyelles:</p>
@@ -760,13 +762,19 @@
 				</div>
 				<div id="section-014" class="section" data-section-no="14">
 					<p>L'accent tonique n'est pas nécessairement attaché à la même syllabe; lorsque le mot augmente d'une syllabe, il peut changer de place. Dans ce cas la voyelle formative change avec lui et est remplacée par une voyelle auxiliaire.</p>
-					<p>1. Dans un mot de deux syllabes qui devient trissyllabique, l'accent passe à la deuxième syllabe s'il était sur la première et ne change pas s'il était déjà sur la seconde:</p>
-					<p><em>ⲥⲟ́ⲗ-ⲥⲉⲗ</em> «consoler», <em>ⲥⲉⲗ-ⲥⲱ́-ⲗⲟⲩ</em> «les consoler».</p>
-					<p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> «avec toi», <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> «avec vous».</p>
-					<p><em>ⲉⲣⲙⲏ́</em> pl. <em>ⲉⲣⲙⲱ́ⲟⲩⲓ</em> «larmes».</p>
-					<p>2. Dans un monosyllabe qui augmente d'une syllabe, l'accent tonique ne change généralement pas de place. Seuls quelques pluriels font exception à cette règle:</p>
-					<p><em>ⲥⲟ́ⲛ</em> «frère» pl. <em>ⲥⲛⲏ́ⲟⲩ</em>.</p>
-					<p><em>ϩⲱ́ⲃ</em> «chose» pl. <em>ϩⲃⲏ́ⲟⲩⲓ</em>.</p>
+					<ol>
+						<li>
+							<p>Dans un mot de deux syllabes qui devient trissyllabique, l'accent passe à la deuxième syllabe s'il était sur la première et ne change pas s'il était déjà sur la seconde:</p>
+							<p><em>ⲥⲟ́ⲗ-ⲥⲉⲗ</em> «consoler», <em>ⲥⲉⲗ-ⲥⲱ́-ⲗⲟⲩ</em> «les consoler».</p>
+							<p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> «avec toi», <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> «avec vous».</p>
+							<p><em>ⲉⲣⲙⲏ́</em> pl. <em>ⲉⲣⲙⲱ́ⲟⲩⲓ</em> «larmes».</p>
+						</li>
+						<li>
+							<p>Dans un monosyllabe qui augmente d'une syllabe, l'accent tonique ne change généralement pas de place. Seuls quelques pluriels font exception à cette règle:</p>
+							<p><em>ⲥⲟ́ⲛ</em> «frère» pl. <em>ⲥⲛⲏ́ⲟⲩ</em>.</p>
+							<p><em>ϩⲱ́ⲃ</em> «chose» pl. <em>ϩⲃⲏ́ⲟⲩⲓ</em>.</p>
+						</li>
+					</ol>
 				</div>
 				<div id="section-015" class="section" data-section-no="15">
 					<p>De même que les syllabes d'un même mot, plusieurs mots dépendant les uns des autres peuvent se grouper sous un seul accent tonique. Celui-ci porte toujours sur le dernier mot du groupe; les autres perdent donc leur voyelle formative qui est remplacée par une voyelle auxiliaire:</p>
