--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -806,104 +806,114 @@
 					<p>La règle trouve surtout son application dans la <i>suffixation</i> (57).</p>
 					<p>Dans ce cas, en vertu de la règle générale:</p>
 				</div>
-				<div id="section-017" class="section" data-section-no="17">
-					<p>1. Une voyelle longue se change en brève quand elle entre dans une syllabe fermée:</p>
-					<p><em>ⲓ</em> en <em>ⲁ</em>, <em>ⲱ</em> et <em>ⲟⲩ</em> en <em>ⲟ</em>.</p>
-					<p><em>ϭⲓ́-ⲥⲓ</em> exalter, <em>ⲁϥ-ϭⲁ́ⲥ-ⲧⲉⲛ</em> il nous a exaltés;</p>
-					<p><em>ϫⲱ́-ⲕⲉⲙ</em> laver, <em>ⲁϥ-ϫⲟ́ⲕ-ⲙⲉϥ</em> il l'a lavé;</p>
-					<p><em>ⲙⲟⲩ́-ⲛⲕ</em> fabriquer, <em>ⲁϥ-ⲙⲟ́ⲛ-ⲕϥ</em> il l'a fabriqué.</p>
-				</div>
-				<div id="section-018" class="section" data-section-no="18">
-					<p>2. Réciproquement une voyelle brève se change en longue quand elle entre dans une syllabe ouverte:</p>
-					<p><em>ⲁ</em> en <em>ⲱ</em>, <em>ⲟ</em> en <em>ⲱ</em> ou en <em>ⲟⲩ</em>.</p>
-					<p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> avec toi, <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> avec vous;</p>
-					<p><em>ⲉ-ⲣⲟ́ⲕ</em> vers toi, <em>ⲉ-ⲣⲱ́-ⲧⲉⲛ</em> vers vous.</p>
-				</div>
+				<ol>
+					<li id="section-017" class="section" data-section-no="17">
+						<p>Une voyelle longue se change en brève quand elle entre dans une syllabe fermée:</p>
+						<p><em>ⲓ</em> en <em>ⲁ</em>, <em>ⲱ</em> et <em>ⲟⲩ</em> en <em>ⲟ</em>.</p>
+						<p><em>ϭⲓ́-ⲥⲓ</em> exalter, <em>ⲁϥ-ϭⲁ́ⲥ-ⲧⲉⲛ</em> il nous a exaltés;</p>
+						<p><em>ϫⲱ́-ⲕⲉⲙ</em> laver, <em>ⲁϥ-ϫⲟ́ⲕ-ⲙⲉϥ</em> il l'a lavé;</p>
+						<p><em>ⲙⲟⲩ́-ⲛⲕ</em> fabriquer, <em>ⲁϥ-ⲙⲟ́ⲛ-ⲕϥ</em> il l'a fabriqué.</p>
+					</li>
+					<li id="section-018" class="section" data-section-no="18">
+						<p>Réciproquement une voyelle brève se change en longue quand elle entre dans une syllabe ouverte:</p>
+						<p><em>ⲁ</em> en <em>ⲱ</em>, <em>ⲟ</em> en <em>ⲱ</em> ou en <em>ⲟⲩ</em>.</p>
+						<p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> avec toi, <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> avec vous;</p>
+						<p><em>ⲉ-ⲣⲟ́ⲕ</em> vers toi, <em>ⲉ-ⲣⲱ́-ⲧⲉⲛ</em> vers vous.</p>
+					</li>
+				</ol>
 				<h6 id="voyelles_auxiliaires">2. Voyelles auxiliaires.</h6>
-				<div id="section-019" class="section" data-section-no="19">
-					<p>1. En règle générale, les voyelles auxiliaires, qu'elles soient dans une syllabe ouverte ou fermée, sont, <em>ⲉ</em> à l'intérieur des mots, <em>ⲓ</em> (S. <em>ⲉ</em>) à la fin:</p>
-					<p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> «il a consolé son frère».</p>
-					<p><em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥϩⲓ́ⲙⲓ</em> «femme», <em>ⲥⲱ́ⲛⲓ</em> «sœur».</p>
-					<p>L'<em>ⲉ</em> auxiliaire se change en <em>ⲁ</em> devant <em>ϩ</em> et dans quelques autres cas qu'on verra plus loin (210):</p>
-					<p><em>ⲁϥ-ⲛⲁϩⲉⲙ-ⲑⲏⲛⲟⲩ</em> «il vous a délivrés».</p>
-				</div>
-				<div id="section-020" class="section" data-section-no="20">
-					<p>2. En tête des mots, la voyelle auxiliaire <em>ⲉ</em> ne s'écrit généralement pas; elle est indiquée par un accent grave dans les mots qui commencent par <em>ⲙ</em> <em>ⲛ</em>:</p>
-					<p><em>ⲙ̀ⲕⲁϩ</em> = <em>ⲉⲙⲕⲁϩ</em> «douleur»,</p>
-					<p><em>ⲛ̀ϩⲟⲧ</em> = <em>ⲉⲛϩⲟⲧ</em> «être fidèle».</p>
-					<p>On trouve souvent aussi ces mots écrits avec l' <em>ⲉ</em> initial, surtout lorsqu'ils forment la seconde partie d'un mot composé:</p>
-					<p><em>ⲁⲧⲉⲙⲕⲁϩ</em> «sans douleur»;</p>
-					<p><em>ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲛϩⲟⲧ</em> «l'homme fidèle».</p>
-					<p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
-				</div>
+				<ol>
+					<li id="section-019" class="section" data-section-no="19">
+						<p>En règle générale, les voyelles auxiliaires, qu'elles soient dans une syllabe ouverte ou fermée, sont, <em>ⲉ</em> à l'intérieur des mots, <em>ⲓ</em> (Ṣ. <em>ⲉ</em>) à la fin:</p>
+						<p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> «il a consolé son frère».</p>
+						<p><em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥϩⲓ́ⲙⲓ</em> «femme», <em>ⲥⲱ́ⲛⲓ</em> «sœur».</p>
+						<p>L'<em>ⲉ</em> auxiliaire se change en <em>ⲁ</em> devant <em>ϩ</em> et dans quelques autres cas qu'on verra plus loin (210):</p>
+						<p><em>ⲁϥ-ⲛⲁϩⲉⲙ-ⲑⲏⲛⲟⲩ</em> «il vous a délivrés».</p>
+					</li>
+					<li id="section-020" class="section" data-section-no="20">
+						<p>En tête des mots, la voyelle auxiliaire <em>ⲉ</em> ne s'écrit généralement pas; elle est indiquée par un accent grave dans les mots qui commencent par <em>ⲙ</em> <em>ⲛ</em>:</p>
+						<p><em>ⲙ̀ⲕⲁϩ</em> = <em>ⲉⲙⲕⲁϩ</em> «douleur»,</p>
+						<p><em>ⲛ̀ϩⲟⲧ</em> = <em>ⲉⲛϩⲟⲧ</em> «être fidèle».</p>
+						<p>On trouve souvent aussi ces mots écrits avec l' <em>ⲉ</em> initial, surtout lorsqu'ils forment la seconde partie d'un mot composé:</p>
+						<p><em>ⲁⲧⲉⲙⲕⲁϩ</em> «sans douleur»;</p>
+						<p><em>ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲛϩⲟⲧ</em> «l'homme fidèle».</p>
+						<p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
+					</li>
+				</ol>
 				<h4 id="changements_de_lettres">D. Changements de Lettres.</h4>
 				<h5 id="consonnes">I. Consonnes.</h5>
 				<h6 id="chute_de_consonnes_finales">1. Chute de consonnes finales.</h6>
-				<div id="section-021" class="section" data-section-no="21">
-					<p>1. <i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
-					<p><em>ⲛⲟⲩϥⲓ</em> ég. <i>noúfir</i>,</p>
-					<p><em>ϩⲑⲟ</em> ég. <i>ḥtor</i>,</p>
-					<p><em>ϣⲱⲡⲓ</em> ég. <i>ḫṓpir</i>,</p>
-					<p><em>ϩⲕⲟ</em> ég. <i>ḥqor</i>,</p>
-					<p><em>ⲥⲁϩⲟⲩⲓ</em> ég. <i>soḥwir</i>,</p>
-					<p><em>ϩⲟ</em> ég. <i>ḥor</i>.</p>
-					<p>La lettre radicale <i>r</i> reparaît lorsque le mot s'augmente d'une terminaison (pluriel, pronoms suffixes, féminin):</p>
-					<p><em>ⲛⲟⲩϥⲓ</em> «utile», <em>ⲛⲟϥⲣⲓ</em> «utilité» (en ég. c'était le féminin);</p>
-					<p><em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ⲁϥ-ⲥϩⲟⲩⲱⲣ-ϥ</em> «il l'a maudit»;</p>
-					<p><em>ϩⲑⲟ</em> «cheval», pl. <em>ϩⲑⲱⲣ</em>;</p>
-					<p><em>ϩⲕⲟ</em> «avoir faim», qualitatif (199), <em>ϩⲟⲕⲉⲣ</em>;</p>
-					<p><em>ϩⲟ</em> «face», <em>ϩⲣⲁϥ</em> «sa face».</p>
-					<p>De même <em>ⲉ</em> (ég. <i>er</i>) «à», <em>ⲉⲣⲟϥ</em> «à lui».</p>
-				</div>
-				<div id="section-022" class="section" data-section-no="22">
-					<p>2. <i>t</i> final dans un mot égyptien est généralement tombé en copte après une voyelle auxiliaire. Le mot copte se termine en <em>ⲓ</em> (S. <em>ⲉ</em>) dans les polysyllabes, en <em>ⲉ</em> dans les monosyllabes:</p>
-					<p><em>ⲣⲱϧⲓ</em> «laver» ég. <i>rṓḫit</i>; <em>ⲫⲉ</em> «ciel» ég. <i>pet</i>.</p>
-					<p>Régulièrement a disparu aussi le <i>t</i> de la terminaison du féminin singulier (<i>it</i>) et du fém. pluriel (<i>wit</i>)<sup class="footnote">1</sup>:</p>
-					<p><em>ⲥⲱⲛⲓ</em> ég. <i>sṓnit</i>,</p>
-					<p><em>ⲛⲟϥⲣⲓ</em> ég. <i>nófrit</i>,</p>
-					<p><em>ⲥϩⲓⲙⲓ</em> ég. <i>ḥī́mit</i>,</p>
-					<p><em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i>,</p>
-					<p><em>ⲫⲏⲟⲩⲓ</em> ég. <i>pḗwit</i>, pluriel de <em>ⲫⲉ</em> «ciel».</p>
-				</div>
+				<ol>
+					<li id="section-021" class="section" data-section-no="21">
+						<p><i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
+						<p><em>ⲛⲟⲩϥⲓ</em> ég. <i>noúfir</i>,</p>
+						<p><em>ϩⲑⲟ</em> ég. <i>ḥtor</i>,</p>
+						<p><em>ϣⲱⲡⲓ</em> ég. <i>ḫṓpir</i>,</p>
+						<p><em>ϩⲕⲟ</em> ég. <i>ḥqor</i>,</p>
+						<p><em>ⲥⲁϩⲟⲩⲓ</em> ég. <i>soḥwir</i>,</p>
+						<p><em>ϩⲟ</em> ég. <i>ḥor</i>.</p>
+						<p>La lettre radicale <i>r</i> reparaît lorsque le mot s'augmente d'une terminaison (pluriel, pronoms suffixes, féminin):</p>
+						<p><em>ⲛⲟⲩϥⲓ</em> «utile», <em>ⲛⲟϥⲣⲓ</em> «utilité» (en ég. c'était le féminin);</p>
+						<p><em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ⲁϥ-ⲥϩⲟⲩⲱⲣ-ϥ</em> «il l'a maudit»;</p>
+						<p><em>ϩⲑⲟ</em> «cheval», pl. <em>ϩⲑⲱⲣ</em>;</p>
+						<p><em>ϩⲕⲟ</em> «avoir faim», qualitatif (199), <em>ϩⲟⲕⲉⲣ</em>;</p>
+						<p><em>ϩⲟ</em> «face», <em>ϩⲣⲁϥ</em> «sa face».</p>
+						<p>De même <em>ⲉ</em> (ég. <i>er</i>) «à», <em>ⲉⲣⲟϥ</em> «à lui».</p>
+					</li>
+					<li id="section-022" class="section" data-section-no="22">
+						<p><i>t</i> final dans un mot égyptien est généralement tombé en copte après une voyelle auxiliaire. Le mot copte se termine en <em>ⲓ</em> (Ṣ. <em>ⲉ</em>) dans les polysyllabes, en <em>ⲉ</em> dans les monosyllabes:</p>
+						<p><em>ⲣⲱϧⲓ</em> «laver» ég. <i>rṓḫit</i>; <em>ⲫⲉ</em> «ciel» ég. <i>pet</i>.</p>
+						<p>Régulièrement a disparu aussi le <i>t</i> de la terminaison du féminin singulier (<i>it</i>) et du fém. pluriel (<i>wit</i>)<sup class="footnote">1</sup>:</p>
+						<p><em>ⲥⲱⲛⲓ</em> ég. <i>sṓnit</i>,</p>
+						<p><em>ⲛⲟϥⲣⲓ</em> ég. <i>nófrit</i>,</p>
+						<p><em>ⲥϩⲓⲙⲓ</em> ég. <i>ḥī́mit</i>,</p>
+						<p><em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i>,</p>
+						<p><em>ⲫⲏⲟⲩⲓ</em> ég. <i>pḗwit</i>, pluriel de <em>ⲫⲉ</em> «ciel».</p>
+					</li>
+				</ol>
 				<h6 id="changements_de_consonnes">2. Changements de consonnes.</h6>
-				<div id="section-023" class="section" data-section-no="23">
-					<p>1. Devant les consonnes <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et les semi-consonnés <em>ⲓ</em> <em>ⲟⲩ</em>, les trois fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em> se changent en leurs aspirées correspondantes <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>:</p>
-					<p><em>ⲫⲣⲏ</em> «le soleil» = <em>ⲡ</em> article + <em>ⲣⲏ</em>;</p>
-					<p><em>ⲑⲙⲁⲩ</em> «la mère» = <em>ⲧ</em> article + <em>ⲙⲁⲩ</em>;</p>
-					<p><em>ⲭⲟⲩⲁⲃ</em> «tu es saint» = <em>ⲕ</em> + <em>ⲟⲩⲁⲃ</em>.</p>
-					<p>Cette règle souffre beaucoup d'exceptions surtout en ce qui concerne <em>ⲭ</em> et <em>ⲑ</em>.</p>
-					<p>Dans les mêmes cas <em>ϫ</em> se change en <em>ϭ</em>:</p>
-					<p><em>ϭⲛⲟⲛ</em> «être tendre», tandis que le qualitatif est <em>ϫⲏⲛ</em>.</p>
-				</div>
-				<div id="section-024" class="section" data-section-no="24">
-					<p>2. Les mêmes lettres <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>, représentant les lettres égyptiennés <i>p</i> <i>k</i> <i>t</i>, se changent encore en leurs aspirées correspondantes quand elles sont placées devant une voyelle accentuée:</p>
-					<p><em>ⲭⲏ́ⲙⲓ</em> ég. <i>kḗmit</i> «l'Egypte»;</p>
-					<p><em>ⲫⲁ́ⲓ</em>, <em>ⲑⲁ́ⲓ</em> «celui-ci, celle-ci»; mais <em>ⲡⲁⲓ</em>, <em>ⲧⲁⲓ</em> «ce, cette», sans accent;</p>
-					<p><em>ϣⲑⲟ́ⲣⲧⲉⲣ</em>, <em>ϣⲧⲉⲣⲑⲱ́ⲣ⸗</em> «troubler»; <em>ⲙ̀ⲫⲱ́ⲣ</em>, <em>ⲙ̀ⲡⲉⲣ-</em> «non».</p>
-				</div>
+				<ol>
+					<li id="section-023" class="section" data-section-no="23">
+						<p>Devant les consonnes <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et les semi-consonnés <em>ⲓ</em> <em>ⲟⲩ</em>, les trois fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em> se changent en leurs aspirées correspondantes <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>:</p>
+						<p><em>ⲫⲣⲏ</em> «le soleil» = <em>ⲡ</em> article + <em>ⲣⲏ</em>;</p>
+						<p><em>ⲑⲙⲁⲩ</em> «la mère» = <em>ⲧ</em> article + <em>ⲙⲁⲩ</em>;</p>
+						<p><em>ⲭⲟⲩⲁⲃ</em> «tu es saint» = <em>ⲕ</em> + <em>ⲟⲩⲁⲃ</em>.</p>
+						<p>Cette règle souffre beaucoup d'exceptions surtout en ce qui concerne <em>ⲭ</em> et <em>ⲑ</em>.</p>
+						<p>Dans les mêmes cas <em>ϫ</em> se change en <em>ϭ</em>:</p>
+						<p><em>ϭⲛⲟⲛ</em> «être tendre», tandis que le qualitatif est <em>ϫⲏⲛ</em>.</p>
+					</li>
+					<li id="section-024" class="section" data-section-no="24">
+						<p>Les mêmes lettres <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>, représentant les lettres égyptiennés <i>p</i> <i>k</i> <i>t</i>, se changent encore en leurs aspirées correspondantes quand elles sont placées devant une voyelle accentuée:</p>
+						<p><em>ⲭⲏ́ⲙⲓ</em> ég. <i>kḗmit</i> «l'Egypte»;</p>
+						<p><em>ⲫⲁ́ⲓ</em>, <em>ⲑⲁ́ⲓ</em> «celui-ci, celle-ci»; mais <em>ⲡⲁⲓ</em>, <em>ⲧⲁⲓ</em> «ce, cette», sans accent;</p>
+						<p><em>ϣⲑⲟ́ⲣⲧⲉⲣ</em>, <em>ϣⲧⲉⲣⲑⲱ́ⲣ⸗</em> «troubler»; <em>ⲙ̀ⲫⲱ́ⲣ</em>, <em>ⲙ̀ⲡⲉⲣ-</em> «non».</p>
+					</li>
+				</ol>
 				<div id="section-025" class="section" data-section-no="25">
 					<p>Mais lorsque la voyelle n'est pas accentuée ou cesse de l'être, elles restent sans changement:</p>
 					<p class="footnote">1. Voir § 13 <i>note</i>.</p>
 					<p><em>ⲃⲁ́ⲕⲓ</em> ég. <i>bákit</i> «ville», <em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i> «année».</p>
 					<p>Voyez l'exemple de <em>ϣⲑⲟⲣⲧⲉⲣ</em>.</p>
 				</div>
-				<div id="section-026" class="section" data-section-no="26">
-					<p>3. Lorsque <em>ⲕ</em> <em>ⲧ</em> représentent les lettres égyptiennes <i>q</i> (<em class="ar">ق</em>), <i>d</i>, elles ne changent pas, même devant une voyelle accentuée:</p>
-					<p><em>ⲕⲟϩ</em> angle,</p>
-					<p><em>ⲕⲁⲥ</em> os,</p>
-					<p><em>ⲧⲉⲛϩ</em> aile,</p>
-					<p><em>ⲧⲏⲃ</em> doigt.</p>
-				</div>
-				<div id="section-027" class="section" data-section-no="27">
-					<p>4. La lettre égyptienne <i>r</i> s'est quelquefois changée en <em>ⲓ</em>, ainsi <em>ⲕⲁⲓⲥⲓ</em> «sépulture» dérive de <i>krst</i> (<i>karsit</i>). Le verbe <em>ⲓⲣⲓ</em> «faire» donne à l'état pronominal (35) <em>ⲁⲓ⸗</em> au lieu de (<em>ⲁⲣ⸗</em>) et au qualitatif <em>ⲟⲓ</em> au lieu de (<em>ⲟⲣⲓ</em>). On a de même <em>ⲙⲉⲓ</em> «aimer» de l'ég. <i>mryt</i> (<i>meryt</i>); dans ce même mot, <i>r</i> reparaît aux autres formes <em>ⲙⲉⲛⲣⲉ-</em> <em>ⲙⲉⲛⲣⲓⲧ⸗</em> (S. <em>ⲙⲉⲣⲉ-</em> <em>ⲙⲉⲣⲓⲧ⸗</em>).</p>
-				</div>
-				<div id="section-028" class="section" data-section-no="28">
-					<p>5. Devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>, <em>ⲛ</em> se change régulièrement en <em>ⲙ</em><sup class="footnote">1</sup>:</p>
-					<p><em>ⲟⲩⲛⲓϣϯ ⲙ̀-ⲃⲁⲕⲓ</em> une grande ville,</p>
-					<p>mais on dira <em>ⲟⲩⲛⲓϣϯ ⲛ̀-ⲣⲱⲙⲓ</em> un grand homme.</p>
-					<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
-					<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
-				</div>
+				<ol>
+					<li id="section-026" class="section" data-section-no="26">
+						<p>Lorsque <em>ⲕ</em> <em>ⲧ</em> représentent les lettres égyptiennes <i>q</i> (<em class="ar">ق</em>), <i>d</i>, elles ne changent pas, même devant une voyelle accentuée:</p>
+						<p><em>ⲕⲟϩ</em> angle,</p>
+						<p><em>ⲕⲁⲥ</em> os,</p>
+						<p><em>ⲧⲉⲛϩ</em> aile,</p>
+						<p><em>ⲧⲏⲃ</em> doigt.</p>
+					</li>
+					<li id="section-027" class="section" data-section-no="27">
+						<p>La lettre égyptienne <i>r</i> s'est quelquefois changée en <em>ⲓ</em>, ainsi <em>ⲕⲁⲓⲥⲓ</em> «sépulture» dérive de <i>krst</i> (<i>karsit</i>). Le verbe <em>ⲓⲣⲓ</em> «faire» donne à l'état pronominal (35) <em>ⲁⲓ⸗</em> au lieu de (<em>ⲁⲣ⸗</em>) et au qualitatif <em>ⲟⲓ</em> au lieu de (<em>ⲟⲣⲓ</em>). On a de même <em>ⲙⲉⲓ</em> «aimer» de l'ég. <i>mryt</i> (<i>meryt</i>); dans ce même mot, <i>r</i> reparaît aux autres formes <em>ⲙⲉⲛⲣⲉ-</em> <em>ⲙⲉⲛⲣⲓⲧ⸗</em> (S. <em>ⲙⲉⲣⲉ-</em> <em>ⲙⲉⲣⲓⲧ⸗</em>).</p>
+					</li>
+					<li id="section-028" class="section" data-section-no="28">
+						<p>Devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>, <em>ⲛ</em> se change régulièrement en <em>ⲙ</em><sup class="footnote">1</sup>:</p>
+						<p><em>ⲟⲩⲛⲓϣϯ ⲙ̀-ⲃⲁⲕⲓ</em> une grande ville,</p>
+						<p>mais on dira <em>ⲟⲩⲛⲓϣϯ ⲛ̀-ⲣⲱⲙⲓ</em> un grand homme.</p>
+						<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
+						<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
+					</li>
+				</ol>
 				<h5 id="changements_de_voyelles">II. Changements de voyelles.</h5>
 				<h6 id="consonne_qui_precede">1. Sous l'influence d'une consonne qui précède.</h6>
 				<div id="section-029" class="section" data-section-no="29">
@@ -917,24 +927,28 @@
 					<p>Le même changement de <em>ⲱ</em> en <em>ⲟⲩ</em> a eu lieu quelquefois après <em>ϣ</em> et <em>ϫ</em>: <em>ϣⲟⲩϣⲧ</em> «trou», <em>ϫⲟⲩϣⲧ</em> «regarder».</p>
 				</div>
 				<h6 id="lettre_qui_suit">2. Sous l'influence d'une lettre qui suit.</h6>
-				<div id="section-030" class="section" data-section-no="30">
-					<p>1. Devant <em>ϩ</em> <em>ϧ</em> et <em>ϣ</em> représentant la lettre égyptienne <i>ḫ</i> = <em class="ar">خ</em>, <em>ⲟ</em> se change en <em>ⲁ</em>:</p>
-					<p><em>ⲁϥ-ⲙⲁϩ-ϥ</em> il l'a rempli;</p>
-					<p><em>ⲁϥ-ⲫⲁϧ-ϥ</em> il l'a fendu;</p>
-					<p><em>ⲁϥ-ⲃⲁϣ-ϥ</em> il l'a dépouillé.</p>
-					<p>Selon la règle générale des verbes bilitères, ces formes devraient avoir un <em>ⲟ</em>:</p>
-					<p><em>ⲁϥ-ⲃⲟⲗ-ϥ</em> «il l'a délié», <em>ⲁϥ-ⲕⲟⲧ-ϥ</em> «il l'a construit».</p>
-					<p>2. Devant <em>ϩ</em>, dans la même syllabe, <em>ⲱ</em> se change en <em>ⲟ</em>, <em>ⲏ</em> en <em>ⲉ</em>: <em>ⲙⲟϩ</em> «remplir» et non <em>ⲙⲱϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>; <em>ⲙⲉϩ</em> «rempli» et non <em>ⲙⲏϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲏⲧ</em>.</p>
-					<p>Mais on a <em>ⲑⲱ-ϩⲉⲙ</em> «appeler», <em>ⲟⲩⲱ-ϩⲉⲙ</em> «répéter».</p>
-				</div>
+				<ol>
+					<li id="section-030" class="section" data-section-no="30">
+						<p>Devant <em>ϩ</em> <em>ϧ</em> et <em>ϣ</em> représentant la lettre égyptienne <i>ḫ</i> = <em class="ar">خ</em>, <em>ⲟ</em> se change en <em>ⲁ</em>:</p>
+						<p><em>ⲁϥ-ⲙⲁϩ-ϥ</em> il l'a rempli;</p>
+						<p><em>ⲁϥ-ⲫⲁϧ-ϥ</em> il l'a fendu;</p>
+						<p><em>ⲁϥ-ⲃⲁϣ-ϥ</em> il l'a dépouillé.</p>
+						<p>Selon la règle générale des verbes bilitères, ces formes devraient avoir un <em>ⲟ</em>:</p>
+						<p><em>ⲁϥ-ⲃⲟⲗ-ϥ</em> «il l'a délié», <em>ⲁϥ-ⲕⲟⲧ-ϥ</em> «il l'a construit».</p>
+					</li>
+					<li>
+						<p>Devant <em>ϩ</em>, dans la même syllabe, <em>ⲱ</em> se change en <em>ⲟ</em>, <em>ⲏ</em> en <em>ⲉ</em>: <em>ⲙⲟϩ</em> «remplir» et non <em>ⲙⲱϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>; <em>ⲙⲉϩ</em> «rempli» et non <em>ⲙⲏϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲏⲧ</em>.</p>
+						<p>Mais on a <em>ⲑⲱ-ϩⲉⲙ</em> «appeler», <em>ⲟⲩⲱ-ϩⲉⲙ</em> «répéter».</p>
+					</li>
+				</ol>
 				<div id="section-031" class="section" data-section-no="31">
 					<p>Devant l'ancienne consonne <i>ꜥ</i> (aïn) qui a complètement disparu en copte, <em>ⲟ</em> s'est généralement changé en <em>ⲁ</em>: <em>ⲟⲩⲁⲃ</em> (en ég. <i>woꜥb</i>) «être pur»; de même <em>ⲉ</em> dans les syllabes <i>ouvertes</i>: <em>ⲓⲁ</em> (en ég. <i>yeꜥ</i>) «laver»; dans les syllabes <i>fermées</i> il se maintient plutôt: <em>ϣⲉⲧ</em> de l'ég. <i>sheꜥd</i> «immoler».</p>
 				</div>
 				<div id="section-032" class="section" data-section-no="32">
 					<p>En Boḥairique, lorsque <em>ⲟ</em> doit se trouver devant <em>ⲟⲩ</em>, il se change en <em>ⲱ</em>: <em>ⲉⲣⲟⲕ</em> «vers toi», <em>ⲉⲣⲱⲟⲩ</em> «vers eux».</p>
-					<p><em>ⲉⲣⲟⲩⲟⲧ</em> «être joyeux», qual. <em>ⲣⲱⲟⲩⲧ</em> (pour <em>ⲣⲟⲟⲩⲧ</em> S).</p>
+					<p><em>ⲉⲣⲟⲩⲟⲧ</em> «être joyeux», qual. <em>ⲣⲱⲟⲩⲧ</em> (pour <em>ⲣⲟⲟⲩⲧ</em> Ṣ).</p>
 					<p>Il n'y a d'exception que pour <em>ⲉϩⲟⲟⲩ</em> «jour», son dérivé <em>ⲙ̀ⲫⲟⲟⲩ</em> «aujourd'hui» et <em>ⲧⲟⲟⲩⲓ</em> «matin».</p>
-					<p>Le Ṣaꜥidique retient <em>ⲟ</em>; on a donc B. <em>-ⲱⲟⲩ</em> = S. <em>-ⲟⲟⲩ</em>.</p>
+					<p>Le Ṣaꜥidique retient <em>ⲟ</em>; on a donc B. <em>-ⲱⲟⲩ</em> = Ṣ. <em>-ⲟⲟⲩ</em>.</p>
 				</div>
 				<h4 id="etats_et_formes">E. Des Trois États et des Trois Formes.</h4>
 				<h5 id="definitions">I. Définitions.</h5>
