--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -952,21 +952,23 @@
 				</div>
 				<h4 id="etats_et_formes">E. Des Trois États et des Trois Formes.</h4>
 				<h5 id="definitions">I. Définitions.</h5>
-				<div id="section-033" class="section" data-section-no="33">
-					<p>De ce qui précède et surtout des paragraphes 14, 15, 17, 18, il ressort qu'un même mot peut avoir trois formes, selon qu'il se trouve dans trois états différents.</p>
-				</div>
-				<h6>1. Etat absolu, forme pleine.</h6>
-				<p>On appelle <i>état absolu</i> l'état d'un mot <i>phonétiquement</i> indépendant de tout autre, c'est-à-dire séparé, dans la prononciation, des mots qui le suivent; dans ce cas il porte toujours l'accent tonique et revêt sa <i>forme pleine</i>: <em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥⲟ́ⲗⲥⲉⲗ</em>, <em>ⲃⲱ́ⲗ</em>.</p>
-				<h6>2. Etat construit, forme abrégée.</h6>
-				<div id="section-034" class="section" data-section-no="34">
-					<p>On appelle <i>état construit</i> l'état d'un mot intimement uni à son complément, de sorte qu'il n'y ait pour les deux qu'un seul accent tonique placé sur le dernier; il prend alors une <i>forme abrégée</i>, où ne se trouvent que des voyelles auxiliaires.</p>
-					<p>Par convention, les grammairiens modernes indiquent cette forme au moyen d'un trait d'union <em>-</em>: <em>ⲣⲉⲙ-</em>, <em>ⲥⲉⲗⲥⲉⲗ-</em>, <em>ⲃⲉⲗ-</em>.</p>
-				</div>
-				<h6>3. Etat pronominal, forme avec suffixes.</h6>
-				<div id="section-035" class="section" data-section-no="35">
-					<p>Enfin un mot est à <i>l'état pronominal</i> lorsqu'il est suivi des pronoms affixes; il revêt alors sa <i>forme avec suffixes</i>.</p>
-					<p>Cette forme est accentuée; elle se distingue de la forme pleine par la voyelle formative; celle-ci, en effet, dans la forme avec suffixes, change de quantité (17, 18) et recule souvent d'une syllabe (14). Par convention, on indique la forme avec suffixes au moyen de deux traits relevés: <em>ⲥⲉⲗⲥⲱ́ⲗ⸗</em>, <em>ⲃⲟ́ⲗ⸗</em>.</p>
-				</div>
+				<p>De ce qui précède et surtout des paragraphes 14, 15, 17, 18, il ressort qu'un même mot peut avoir trois formes, selon qu'il se trouve dans trois états différents.</p>
+				<ol>
+					<li id="section-033" class="section" data-section-no="33">
+						<p><b>Etat absolu, forme pleine.</b></p>
+						<p>On appelle <i>état absolu</i> l'état d'un mot <i>phonétiquement</i> indépendant de tout autre, c'est-à-dire séparé, dans la prononciation, des mots qui le suivent; dans ce cas il porte toujours l'accent tonique et revêt sa <i>forme pleine</i>: <em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥⲟ́ⲗⲥⲉⲗ</em>, <em>ⲃⲱ́ⲗ</em>.</p>
+					</li>
+					<li id="section-034" class="section" data-section-no="34">
+						<p><b>Etat construit, forme abrégée.</b></p>
+						<p>On appelle <i>état construit</i> l'état d'un mot intimement uni à son complément, de sorte qu'il n'y ait pour les deux qu'un seul accent tonique placé sur le dernier; il prend alors une <i>forme abrégée</i>, où ne se trouvent que des voyelles auxiliaires.</p>
+						<p>Par convention, les grammairiens modernes indiquent cette forme au moyen d'un trait d'union <em>-</em>: <em>ⲣⲉⲙ-</em>, <em>ⲥⲉⲗⲥⲉⲗ-</em>, <em>ⲃⲉⲗ-</em>.</p>
+					</li>
+					<li id="section-035" class="section" data-section-no="35">
+						<p><b>Etat pronominal, forme avec suffixes.</b></p>
+						<p>Enfin un mot est à <i>l'état pronominal</i> lorsqu'il est suivi des pronoms affixes; il revêt alors sa <i>forme avec suffixes</i>.</p>
+						<p>Cette forme est accentuée; elle se distingue de la forme pleine par la voyelle formative; celle-ci, en effet, dans la forme avec suffixes, change de quantité (17, 18) et recule souvent d'une syllabe (14). Par convention, on indique la forme avec suffixes au moyen de deux traits relevés: <em>ⲥⲉⲗⲥⲱ́ⲗ⸗</em>, <em>ⲃⲟ́ⲗ⸗</em>.</p>
+					</li>
+				</ol>
 				<div id="section-036" class="section" data-section-no="36">
 					<p>Cette troisième forme, augmentée des suffixes personnels, peut encore être traitée comme forme pleine et comme forme abrégée, c'est-à-dire qu'elle ne porte pas toujours nécessairement l'accent tonique. Ceci a lieu dans les adjectifs et pronoms possessifs. Ainsi on a <em>ⲡⲉϥ-</em> «son» et <em>ⲫⲱ́ϥ</em> (24) «le sien»; <em>ⲡⲉϥ-</em> est la forme abrégée de <em>ⲫⲱϥ</em>. De même <em>ⲧⲉϥ-</em> «sa» et <em>ⲑⲱ́ϥ</em> (24) «la sienne»; <em>ⲛⲉϥ-</em> «ses» et <em>ⲛⲟⲩ́ϥ</em> (29) «les siens». Tous les verbes auxiliaires sont dans ce cas, avec cette différence qu'ils n'ont pas de forme pleine: <em>ⲛⲁⲣⲉ-</em> <em>ⲛⲁϥ-</em>; <em>ⲙⲁⲣⲉ-</em> <em>ⲙⲁⲣⲉϥ-</em>; <em>ⲁϥⲑⲣⲉϥ-</em> au lieu de <em>ⲁϥⲑⲣⲟ́ϥ</em>, <i>cf.</i> <em>ⲁϥⲧⲁⲗⲟϥ</em>.</p>
 					<p>Nous indiquerons ces formes avec suffixes, abrégées, au moyen du double signe <em>⸗-</em>: <em>ⲛ⸗-</em> sera l'adjectif possessif (74), <em>ⲛ⸗</em> la particule accentuée <em>ⲛⲏ́ⲓ</em> <em>ⲛⲁ́ⲕ</em> etc. «à moi, à toi» (61); <em>ⲛ̀ⲧ⸗-</em> sera l'auxiliaire du subjonctif <em>ⲛ̀ⲧⲁ-</em> <em>ⲛ̀ⲧⲉⲕ</em> etc.; <em>ⲛ̀ⲧ⸗</em>, la particule du génitif <em>ⲛ̀ⲧⲏ́ⲓ</em> <em>ⲛ̀ⲧⲁ́ⲕ</em> etc. (61).</p>
