--- a/maltese/aquilina/index.html
+++ b/maltese/aquilina/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<p>Part II</p>
-		<p>Morphology</p>
-		<p>Lesson 1</p>
-		<p>The Article</p>
+		<p>PART II</p>
+		<p>MORPHOLOGY</p>
+		<p><i>Lesson 1</i></p>
+		<p>THE ARTICLE</p>
 		<p>(N.B. From now on, words are given in the standard spelling. Phonetic notation is given only where necessary.)</p>
 		<p>Maltese has only the definite article <em>l-</em> or <em>il-</em> (vowel <em>i</em> + article) preceding a noun or an adjective used as a noun for the two genders (m. and f.), and the two numbers (sing. and pl.). The mere absence of this definite article makes the (i) noun or (ii) any descriptive word used as a noun indefinite.</p>
 		<p>Exx.</p>
@@ -124,5 +124,33 @@
 		<p><em>aħna</em> 'we' or 'we are', <em>m'aħniex</em> 'we are not';</p>
 		<p><em>intom</em> 'you' or 'you are', <em>m'intomx</em> 'you are not';</p>
 		<p><em>huma</em> 'they' or 'they are', <em>m'humiex</em> 'they are not'.</p>
+		<p>The student of Arabic should note that in Maltese the gender-distinction has been maintained only in he/she (3rd. pers. sing.).</p>
+		<p>Exx.</p>
+		<p><em>hu marid</em> (lit. he sick) 'he is sick';</p>
+		<p><em>hi Maltija</em> 'she is Maltese';</p>
+		<p><em>intom, huma Nsara</em> 'you, they (both genders) are Christians'.</p>
+		<p>Because personal pronouns have also a verbal function, they can be added after the subject to which they refer. This is often done either redundantly or for emphasis. They are left out when no emphasis is intended.</p>
+		<p>Exx.</p>
+		<p><em>l-Italja hi art sabiħa</em> 'Italy (lit. + she) is a beautiful land';</p>
+		<p><em>l-Italja art sabiħa</em> 'Italy is a beautiful land'.</p>
+		<p>The personal pronouns and pronominal suffixes are treated more fully in Lesson 11.</p>
+		<p><i>SOME USEFUL WORDS</i></p>
+		<p>Memorise the following words useful as links in the formation of phrases and sentences:</p>
+		<p><em>u</em> 'and';</p>
+		<p><em>hemm</em> 'there is' or 'there are';</p>
+		<p><em>hawn</em> 'here is' or 'here are';</p>
+		<p><em>mhux</em> 'he (it) is not';</p>
+		<p><em>għax</em> 'because';</p>
+		<p><em>għaliex</em> 'because, why?';</p>
+		<p><em>ta'</em> 'of';</p>
+		<p><em>ma'</em> 'with'.</p>
+		<p>EXERCISE 1 b &amp; c</p>
+		<p><i>Translate:</i></p>
+		<p>(a)</p>
+		<p><em>L-Italja qrib</em> (near) <em>Malta. It-Taljan ħafif; l-Ingliż inqas</em> (less) <em>ħafif. L-Ispanjoli jistudjaw</em> (study) <em>l-Ingliż u l-Franċiż. Il-Maltin jistudjaw ħafna</em> (very much) <em>l-Ingliż. Is-silġ abjad. L-Ingilterra hemm</em> (there is) <em>ħafna xita, ksieħ u ċpar. L-art u s-sema fid-dlam. Malta gżira xemxija. L-Ingliżi jħobbu</em> (love) <em>il-baħar. Il-Malti</em> (Maltese) <em>lsien semitku</em> (semitic)<em>.</em></p>
+		<p>c.</p>
+		<p>He went (<em>mar</em>) to church (def. art. + <em>knisja</em>) and (<em>u</em>) to market (def. art. + <em>suq</em>). He is in prison (def. art. + <em>ħabs</em>). Man (def. art. + <em>bniedem</em>) is not eternal (<em>etern</em>). Only (<em>biss</em> after God) God is eternal. Vesuvius (def. art. + <em>Vessuvju</em>) is a volcano (<em>vulkan</em>) in Naples. They are not Christians (<em>Nsara</em>). Qrendi is a village (<em>raħal</em>) in (<em>f'</em>) Malta and Għarb is a village in Gozo. She is not Maltese and he is not French. Russia is a large country (<em>art kbira</em>). Malta and Gozo are (<em>huma</em> = they) islands (<em>gżejjer</em>).</p>
+		<p><i>Lesson 2</i></p>
+		<p>AN INTRODUCTION TO WORD STRUCTURE</p>
 	</body>
 </html>
